--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -15,3 +15,10 @@ header {
   width: 100vw;
   height: 100vh;
 }
+
+#main-menu {
+  position: absolute;
+  left: 0px;
+  bottom: 0px;
+  opacity: 0.6;
+}
