Add find ski area

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,6 @@
 <div #map id="map"></div>
-<main-menu id="main-menu" (onLoadSkiArea)="loadSkiArea($event)"></main-menu>
+<main-menu
+  id="main-menu"
+  (onLoadSkiArea)="loadSkiArea($event)"
+  (onFindSkiArea)="findSkiArea($event)"
+></main-menu>
