--- a/src/app/main-menu.component.html
+++ b/src/app/main-menu.component.html
@@ -1,3 +1,4 @@
 <div class="menu">
   <button mat-button (click)="loadSkiArea()">Load ski area</button>
+  <button mat-button (click)="findSkiArea()">Find ski area</button>
 </div>
