--- a/src/app/name-input-dialog.component.html
+++ b/src/app/name-input-dialog.component.html
@@ -5,6 +5,6 @@
   </mat-form-field>
   <div class="button-row">
     <button mat-flat-button (click)="accept()">OK</button>
-    <button mat-flat-button (click)="cancel()">Cancel</button>
+    <button mat-stroked-button (click)="cancel()">Cancel</button>
   </div>
 </div>
