--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,24 +1,7 @@
-:host {
-  --content-padding: 10px;
-}
-header {
-  display: block;
-  height: 60px;
-  padding: var(--content-padding);
-  box-shadow: 0px 5px 25px var(--shadow-color);
-}
-.content {
-  padding: var(--content-padding);
-}
-
-#map {
-  width: 100vw;
-  height: 100vh;
-}
-
-#main-menu {
+.main-menu-container {
   position: absolute;
   left: 0px;
   bottom: 0px;
-  opacity: 0.6;
+  opacity: 0.8;
+  width: 100%;
 }
