--- a/src/app/components/name-input-dialog.component.html
+++ b/src/app/components/name-input-dialog.component.html
@@ -1,5 +1,5 @@
 <div class="dialog-background">
-  <mat-form-field>
+  <mat-form-field class="name-input">
     <mat-label>{{ data.label }}</mat-label>
     <input matInput #name placeholder="{{ data.placeholder }}" />
   </mat-form-field>
