--- a/src/app/components/main-menu.component.html
+++ b/src/app/components/main-menu.component.html
@@ -1,4 +1,5 @@
 <div class="menu">
   <button mat-button (click)="loadSkiArea()">Load ski area</button>
   <button mat-button (click)="findSkiArea()">Find ski area</button>
+  <button mat-button (click)="loadTrack()">Load track</button>
 </div>
