--- a/src/app/components/selection-info.component.html
+++ b/src/app/components/selection-info.component.html
@@ -15,8 +15,5 @@
   </div>
   <div class="name">{{ liftName() }}</div>
   <name-value name="Type" [value]="liftType()"></name-value>
-  <name-value
-    name="Stations"
-    [value]="'' + selectedLift()!.stations.length"
-  ></name-value>
+  <name-value name="Stations" [value]="stationCount()"></name-value>
 </mat-card>
