--- a/src/app/components/selection-info.component.html
+++ b/src/app/components/selection-info.component.html
@@ -1,3 +1,7 @@
+<mat-card class="card" *ngIf="!!selectedActivity()">
+  <name-value name="Type" [value]="activityType()"></name-value>
+</mat-card>
+
 <mat-card class="card" *ngIf="!!selectedPiste()">
   <div class="icon-container">
     <div class="piste-icon"></div>
@@ -10,18 +14,11 @@
   ></name-value>
 </mat-card>
 
-<mat-card class="card" *ngIf="!!selectedLift()">
+<mat-card class="card" *ngIf="!!lift()">
   <div *ngIf="!!liftIcon()" class="icon-container">
     <img src="{{ liftIcon() }}" />
   </div>
   <div class="name">{{ liftName() }}</div>
   <name-value name="Type" [value]="liftType()"></name-value>
   <name-value name="Stations" [value]="stationCount()"></name-value>
-</mat-card>
-
-<mat-card class="card" *ngIf="!!selectedActivity()">
-  <name-value name="Type" [value]="activityType()"></name-value>
-  @if (isUseLift()) {
-    <name-value name="Lift" [value]="activityLift()"></name-value>
-  }
 </mat-card>
