Calculate closest lift

--- a/src/app/components/selection-info.component.html
+++ b/src/app/components/selection-info.component.html
@@ -21,6 +21,11 @@
     [value]="waypointSpeed()"
   ></name-value>
   <name-value *ngIf="!!speed()" name="Speed" [value]="speed()"></name-value>
+  <name-value
+    *ngIf="!!closestLift()"
+    name="Closest lift"
+    [value]="closestLift()"
+  ></name-value>
 </mat-card>
 
 <mat-card class="card" *ngIf="!!selectedPiste()">
