Make analyzed route loadable

--- a/src/app/components/main-menu.component.html
+++ b/src/app/components/main-menu.component.html
@@ -1,5 +1,6 @@
 <div class="menu">
   <button mat-button (click)="loadSkiArea()">Load ski area</button>
   <button mat-button (click)="findSkiArea()">Find ski area</button>
-  <button mat-button (click)="loadTrack()">Load track</button>
+  <button mat-button (click)="loadGpx()">Load GPX</button>
+  <button mat-button (click)="loadRoute()">Load analyzed route</button>
 </div>
