--- a/src/app/components/main-menu.component.html
+++ b/src/app/components/main-menu.component.html
@@ -3,4 +3,5 @@
   <button mat-button (click)="findSkiArea()">Find ski area</button>
   <button mat-button (click)="loadGpx()">Load GPX</button>
   <button mat-button (click)="loadRoute()">Load analyzed route</button>
+  <button mat-button (click)="mapService.lofasz()">lofasz</button>
 </div>
