--- a/src/styles.css
+++ b/src/styles.css
@@ -20,3 +20,11 @@ body {
 .name-input {
   width: 300px;
 }
+
+.button-row {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin-top: 20px;
+}
