--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -6,9 +6,11 @@
   width: 100%;
 }
 
-selection-info {
+.sidebar {
+  height: 100%;
   position: absolute;
   right: 0px;
   top: 0px;
+  bottom: 0px;
   opacity: 0.8;
 }
