Improve ski area selection

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,10 @@
     <main-menu *ngIf="!hasSelectableSkiArea()"></main-menu>
   }
 </div>
-<selection-info class="sidebar"></selection-info>
+<selection-info
+  *ngIf="!hasSelectableSkiArea()"
+  class="sidebar"
+></selection-info>
 <ski-area-selector
   *ngIf="hasSelectableSkiArea()"
   class="sidebar"
