--- a/src/app/components/ski-area-selector.component.html
+++ b/src/app/components/ski-area-selector.component.html
@@ -1,6 +1,15 @@
 <div class="dialog-background">
+  <mat-form-field class="full-width">
+    <mat-label>Search</mat-label>
+    <input
+      matInput
+      type="text"
+      [(ngModel)]="filter"
+      placeholder="Type here to filter ski areas"
+    />
+  </mat-form-field>
   <mat-action-list class="ski-area-list">
-    @for (skiArea of skiAreas(); track skiArea.id) {
+    @for (skiArea of displayedSkiAreas(); track skiArea.id) {
       <button
         mat-list-item
         (click)="accept(skiArea.id)"
