--- a/src/app/components/ski-area-selector.component.html
+++ b/src/app/components/ski-area-selector.component.html
@@ -8,6 +8,11 @@
       placeholder="Type here to filter ski areas"
     />
   </mat-form-field>
+  <mat-action-list class="width-bar">
+    @for (skiArea of skiAreas(); track skiArea.id) {
+      <button mat-list-item>{{ skiArea.name }}</button>
+    }
+  </mat-action-list>
   <mat-action-list class="ski-area-list">
     @for (skiArea of displayedSkiAreas(); track skiArea.id) {
       <button
