Select ski area on enter

--- a/src/app/components/ski-area-selector.component.html
+++ b/src/app/components/ski-area-selector.component.html
@@ -2,6 +2,7 @@
   <mat-form-field class="full-width">
     <mat-label>Search</mat-label>
     <input
+      #search
       matInput
       type="text"
       [(ngModel)]="filter"
