--- a/src/app/components/main-menu.component.html
+++ b/src/app/components/main-menu.component.html
@@ -1,5 +1,6 @@
 <div class="menu">
   <button mat-button (click)="loadSkiArea()">Load ski area</button>
+  <button mat-button (click)="loadCachedSkiArea()">Ski areas</button>
   <button mat-button (click)="findSkiArea()">Find ski area</button>
   <button mat-button (click)="findNearbySkiAreas()">Nearby ski areas</button>
   <button mat-button (click)="loadGpx()">Load GPX</button>
