--- a/src/app/components/ski-area-selector.component.html
+++ b/src/app/components/ski-area-selector.component.html
@@ -10,24 +10,50 @@
     />
   </mat-form-field>
   <mat-action-list class="width-bar">
-    @for (skiArea of skiAreas(); track skiArea.id) {
+    @for (skiArea of cachedSkiAreas(); track skiArea.uuid) {
+      <button mat-list-item disabled>{{ skiArea.metadata.name }}</button>
+    }
+    @for (skiArea of loadedSkiAreas(); track skiArea.id) {
       <button mat-list-item disabled>{{ skiArea.name }}</button>
     }
   </mat-action-list>
+  <h1>Cached ski areas</h1>
   <mat-action-list class="ski-area-list">
-    @for (skiArea of displayedSkiAreas(); track skiArea.id) {
+    @for (skiArea of displayedCachedSkiAreas(); track skiArea.uuid) {
       <button
         mat-list-item
-        (click)="accept(skiArea.id)"
-        (focus)="focusListItem(skiArea)"
+        (click)="acceptCached(skiArea.uuid)"
+        (focus)="focusListItem(skiArea.metadata)"
         (blur)="blurListItem()"
-        (mouseenter)="hoverListItem(skiArea)"
+        (mouseenter)="hoverListItem(skiArea.metadata)"
         (mouseleave)="unhoverListItem()"
       >
-        {{ skiArea.name }}
+        {{ skiArea.metadata.name }}
       </button>
     }
   </mat-action-list>
+
+  @if (loadedSkiAreas() !== undefined) {
+    <h1>Ski areas</h1>
+    @if (loadedSkiAreas() !== null) {
+      <mat-action-list class="ski-area-list">
+        @for (skiArea of displayedLoadedSkiAreas(); track skiArea.id) {
+          <button
+            mat-list-item
+            (click)="acceptLoaded(skiArea.id)"
+            (focus)="focusListItem(skiArea)"
+            (blur)="blurListItem()"
+            (mouseenter)="hoverListItem(skiArea)"
+            (mouseleave)="unhoverListItem()"
+          >
+            {{ skiArea.name }}
+          </button>
+        }
+      </mat-action-list>
+    } @else {
+      <div class="ski-area-list loading"></div>
+    }
+  }
   <div class="button-row">
     <button mat-stroked-button (click)="cancel()">Cancel</button>
   </div>
