--- a/src/app/components/cached-ski-area-item.component.css
+++ b/src/app/components/cached-ski-area-item.component.css
@@ -5,9 +5,15 @@
   justify-content: space-between;
 }
 
+.item-button {
+  flex: 1;
+  justify-content: left;
+}
+
 .description {
   display: flex;
   flex-direction: column;
+  align-items: baseline;
 }
 
 .date {
