--- a/src/app/components/selection-info.component.html
+++ b/src/app/components/selection-info.component.html
@@ -30,7 +30,7 @@
 
 <mat-card class="card" *ngIf="!!selectedPiste()">
   <div class="icon-container">
-    <div class="piste-icon"></div>
+    <mat-icon svgIcon="piste" class="piste-icon"></mat-icon>
   </div>
   <div class="name">{{ pisteName() }}</div>
   <name-value
