--- a/src/app/components/ski-area-selector.component.html
+++ b/src/app/components/ski-area-selector.component.html
@@ -60,7 +60,9 @@
         }
       </div>
     } @else {
-      <div class="ski-area-list loading"></div>
+      <div class="loading-bg">
+        <mat-icon class="loading-icon" svgIcon="piste" color="#888"></mat-icon>
+      </div>
     }
   }
   <div class="button-row">
