Hide ski area when removing

--- a/src/app/components/ski-area-selector.component.html
+++ b/src/app/components/ski-area-selector.component.html
@@ -30,7 +30,7 @@
       <cached-ski-area-item
         [skiArea]="skiArea"
         (select)="acceptCached(skiArea.uuid)"
-        (delete)="deleteCached(skiArea.uuid)"
+        (delete)="deleteCached(skiArea)"
         (focus)="focusListItem(skiArea.metadata)"
         (blur)="blurListItem()"
         (mouseenter)="hoverListItem(skiArea.metadata)"
