Confirm loading of existing ski area

--- a/src/app/components/name-input-dialog.component.html
+++ b/src/app/components/name-input-dialog.component.html
@@ -7,6 +7,6 @@
     <button mat-flat-button [disabled]="isInvalid()" (click)="accept()">
       OK
     </button>
-    <button mat-stroked-button mat-dialog-close>Cancel</button>
+    <button mat-button mat-dialog-close>Cancel</button>
   </mat-dialog-actions>
 </div>
