--- a/src/app/components/ski-area-selector.component.html
+++ b/src/app/components/ski-area-selector.component.html
@@ -48,7 +48,7 @@
             <button
               mat-button
               class="loaded-item"
-              (click)="acceptLoaded(skiArea.id)"
+              (click)="acceptLoaded(skiArea)"
               (focus)="focusListItem(skiArea)"
               (blur)="blurListItem()"
               (mouseenter)="hoverListItem(skiArea)"
