--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,10 +6,7 @@
     <main-menu *ngIf="!hasSelectableSkiArea()"></main-menu>
   }
 </div>
-<selection-info
-  *ngIf="!hasSelectableSkiArea()"
-  class="sidebar"
-></selection-info>
+<selection-info *ngIf="!hasSelectableSkiArea()"></selection-info>
 <ski-area-selector
   *ngIf="hasSelectableSkiArea()"
   class="sidebar"
