--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,20 @@
-<map></map>
-<div class="main-menu-container">
-  @if (loading()) {
-    <mat-progress-bar mode="indeterminate"></mat-progress-bar>
-  } @else {
-    <main-menu *ngIf="!hasSelectableSkiArea()"></main-menu>
-  }
+<map id="map"></map>
+<div class="view">
+  <ski-area-selector
+    *ngIf="hasSelectableSkiArea()"
+    class="sidebar overlay"
+  ></ski-area-selector>
+  <div class="view-inner">
+    <div class="main-menu-container">
+      @if (loading()) {
+        <mat-progress-bar mode="indeterminate"></mat-progress-bar>
+      } @else {
+        <main-menu *ngIf="!hasSelectableSkiArea()"></main-menu>
+      }
+    </div>
+  </div>
 </div>
-<selection-info *ngIf="!hasSelectableSkiArea()"></selection-info>
-<ski-area-selector
-  *ngIf="hasSelectableSkiArea()"
-  class="sidebar"
-></ski-area-selector>
+<selection-info
+  *ngIf="!hasSelectableSkiArea()"
+  class="overlay"
+></selection-info>
