--- a/src/app/components/name-value.component.html
+++ b/src/app/components/name-value.component.html
@@ -1,4 +1,9 @@
 <div>
-  <span class="label">{{ name }}: </span>
-  <span class="value">{{ value }}</span>
+  <span class="label">{{ name() }}: </span>
+  <span *ngIf="value() !== ''" class="value">{{ value() }}</span>
+</div>
+<div *ngIf="values().length !== 0" class="values-list">
+  @for (value of values(); track value) {
+    <div class="value">{{ value }}</div>
+  }
 </div>
