--- a/src/app/components/selection-info.component.html
+++ b/src/app/components/selection-info.component.html
@@ -27,6 +27,11 @@
     [value]="elevation()"
   ></name-value>
   <name-value
+    *ngIf="!!inclination()"
+    name="Inclination"
+    [value]="inclination()"
+  ></name-value>
+  <name-value
     *ngIf="!!elevationAccuracy()"
     name="Elevation accuracy"
     [value]="elevationAccuracy()"
