--- a/src/app/components/selection-info.component.html
+++ b/src/app/components/selection-info.component.html
@@ -41,6 +41,11 @@
     name="Closest lift"
     [value]="closestLift()"
   ></name-value>
+  <name-value
+    *ngIf="waypointComment().length !== 0"
+    name="Comment"
+    [values]="waypointComment()"
+  ></name-value>
 </mat-card>
 
 <mat-card class="card" *ngIf="!!selectedPiste()">
