--- a/src/app/components/selection-info.component.html
+++ b/src/app/components/selection-info.component.html
@@ -22,6 +22,11 @@
   ></name-value>
   <name-value *ngIf="!!speed()" name="Speed" [value]="speed()"></name-value>
   <name-value
+    *ngIf="!!activityPiste()"
+    name="Piste"
+    [value]="activityPiste()"
+  ></name-value>
+  <name-value
     *ngIf="!!elevation()"
     name="Elevation"
     [value]="elevation()"
