--- a/src/app/components/name-value.component.scss
+++ b/src/app/components/name-value.component.scss
@@ -1,7 +1,13 @@
-.label {
+.header dd {
+  display: inline;
+}
+
+dt {
+  display: inline;
   font-weight: 500;
 }
 
-.values-list {
+dd {
+  display: block;
   padding-left: 15px;
 }
